# regdrift

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RULES.md  action.yml  pyproject.toml
.agents/skills/session-handoff/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: action-selftest.yml  ci.yml  release.yml
demo/: README.md  chip_v1.svd  chip_v2.svd
docs/: agent-operating-model.md  architecture.md  json-schema.md  name-check.md  release-checklist.md  sprint0-verification.md
scripts/: fetch_corpus.py  make_demo.py  make_goldens.py
src/regdrift/: __init__.py  cli.py  config.py  diff.py  model.py  parse.py  report.py  rules.py
tests/: conftest.py  test_action.py  test_audit_findings.py  test_cli_check.py  test_cli_diff.py  test_cli_parse.py  test_config.py  test_corpus.py  test_council_fixes.py  test_demo.py  test_diff_corpus.py  test_diff_matching.py  test_diff_modified.py  test_fuzz.py  test_golden.py  test_interrupts.py  test_mutations.py  test_parse_cascade.py  test_parse_derivedfrom.py  test_parse_dim.py  test_parse_errors.py  test_parse_fields.py  test_perf.py  test_report_snapshots.py  test_rules.py  test_smoke.py  test_write_read_semantics.py
tests/golden/: ARM_Sample.json  corpus_hashes.json
validation/pre_release/: CODEX_PROMPT.md  README.md  run_cases.py  setup_cases.py  sources.lock.json
validation/pre_release/cases/01_identity_arm_sample/: case.json  case.yml
validation/pre_release/cases/02_identity_stm32h7/: case.json  case.yml
validation/pre_release/cases/03_identity_nrf52840/: case.json  case.yml
validation/pre_release/cases/04_identity_imxrt/: case.json  case.yml
validation/pre_release/cases/05_identity_rp2040/: case.json  case.yml
validation/pre_release/cases/06_real_same70_revisions/: case.json  case.yml
(+20 files in other folders)
